# pennyledger

./: .gitignore  README.md  pyproject.toml
src/pennyledger/: __init__.py  db.py  main.py  models.py  schemas.py  util.py
src/pennyledger/routes/: accounts.py  budgets.py  categories.py  reports.py  transactions.py
src/pennyledger/services/: accounts.py  budgets.py  categories.py  reports.py  transactions.py
static/: index.html
tests/: conftest.py  test_budgets.py  test_reports.py  test_transactions.py
